--- a/SudokuGUI/SudokuGUI.vcxproj.filters
+++ b/SudokuGUI/SudokuGUI.vcxproj.filters
@@ -15,21 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SudokuSolver.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Sudoku.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Sudoku.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="pch.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="SudokuSolver.cpp">
+    <ClCompile Include="SudokuGUI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
